# ParallelHalfedgeSubdivision

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  bench_cc.cpp  bench_cc_cpu.cpp  bench_loop.cpp  bench_loop_cpu.cpp  bench_loop_gpu.cpp  catmull-clark_cpu.cpp  catmull-clark_gpu.cpp  crease.cpp  crease.h  halfedge.cpp  halfedge.h  loop_cpu.cpp  loop_gpu.cpp  main_cc.cpp  main_loop.cpp  mesh.cpp  mesh.h  mesh_cc.cpp  mesh_loop.cpp  mesh_subdiv.cpp  stats.cpp  test_loop_cpu.cpp  test_loop_gpu.cpp
data_testing/: Readme.txt
deprecated/: CMakeLists.txt  Mesh_tikz_export.cpp  loop_cpu.cpp
deprecated/lib/: mesh.h  mesh_cc.cpp  mesh_loop.cpp  meshsubdivision.cpp
deprecated/lib_gpu/: mesh_loop_gpu.cpp
lib/: README.md  crease.h  dj_opengl.h  halfedge.h  helpers.h  mesh.cpp  mesh.h  mesh_loop.cpp  mesh_subdiv.cpp  mesh_subdiv.h  mesh_subdiv_catmull-clark.cpp  mesh_subdiv_catmull-clark.h  mesh_subdiv_catmull-clark_cpu.cpp  mesh_subdiv_catmull-clark_cpu.h  mesh_subdiv_catmull-clark_gpu.cpp  mesh_subdiv_catmull-clark_gpu.h  mesh_subdiv_cpu.cpp  mesh_subdiv_cpu.h  mesh_subdiv_gpu.cpp  mesh_subdiv_gpu.h  mesh_subdiv_loop.cpp  mesh_subdiv_loop.h  mesh_subdiv_loop_cpu.cpp  mesh_subdiv_loop_cpu.h  mesh_subdiv_loop_gpu.cpp  mesh_subdiv_loop_gpu.h  timings.h  utils.h  vec3.h
lib_gpu/: dj_opengl.h  gpu_debug_logger.h  mesh_loop_gpu.cpp  mesh_loop_gpu.h  mesh_subdiv_gpu.cpp  mesh_subdiv_gpu.h  mesh_subdiv_loop_gpu.cpp
meshes/: credits.txt
meshes/data_testing/: Readme.txt
results/: bench_bigguy_cpu_tav.txt  resultsBigguy.txt
results/ArmorGuyT/: ArmorGuyT_crease_1_16.txt  ArmorGuyT_crease_1_2.txt  ArmorGuyT_crease_1_4.txt  ArmorGuyT_crease_1_8.txt  ArmorGuyT_crease_2_1.txt  ArmorGuyT_crease_2_32.txt  ArmorGuyT_crease_3_1.txt  ArmorGuyT_crease_3_2.txt  ArmorGuyT_crease_3_4.txt  ArmorGuyT_crease_4_16.txt  ArmorGuyT_crease_4_8.txt  ArmorGuyT_crease_5_16.txt  ArmorGuyT_crease_5_2.txt  ArmorGuyT_crease_5_32.txt  ArmorGuyT_crease_5_4.txt  ArmorGuyT_crease_5_8.txt  ArmorGuyT_crease_6_1.txt  ArmorGuyT_crease_6_16.txt  ArmorGuyT_crease_6_32.txt  ArmorGuyT_crease_6_4.txt  ArmorGuyT_crease_6_8.txt  ArmorGuyT_crease_7_1.txt  ArmorGuyT_crease_7_16.txt  ArmorGuyT_crease_7_2.txt  ArmorGuyT_halfedge_1_1.txt  ArmorGuyT_halfedge_1_16.txt  ArmorGuyT_halfedge_1_2.txt  ArmorGuyT_halfedge_1_4.txt  ArmorGuyT_halfedge_2_1.txt  ArmorGuyT_halfedge_3_32.txt  ArmorGuyT_halfedge_4_16.txt  ArmorGuyT_halfedge_4_32.txt  ArmorGuyT_halfedge_4_8.txt  ArmorGuyT_halfedge_5_16.txt  ArmorGuyT_halfedge_5_32.txt  ArmorGuyT_halfedge_6_16.txt  ArmorGuyT_halfedge_6_2.txt  ArmorGuyT_halfedge_6_4.txt  ArmorGuyT_halfedge_7_1.txt  ArmorGuyT_halfedge_7_16.txt  (+29 more)
results/bench_cpu/: make_tex_depth7
results/bench_gpu/: ArmorGuyT_gpu_clear.txt  ArmorGuyT_gpu_crease.txt  ArmorGuyT_gpu_halfedge.txt  ArmorGuyT_gpu_modelling.txt  ArmorGuyT_gpu_rendering.txt  ArmorGuyT_gpu_vertex.txt  bigguyT_gpu_clear.txt  bigguyT_gpu_crease.txt  bigguyT_gpu_halfedge.txt  bigguyT_gpu_modelling.txt  bigguyT_gpu_rendering.txt  bigguyT_gpu_vertex.txt  carT_gpu_clear.txt  carT_gpu_crease.txt  carT_gpu_halfedge.txt  carT_gpu_modelling.txt  carT_gpu_rendering.txt  carT_gpu_vertex.txt  imrodT_gpu_clear.txt  imrodT_gpu_crease.txt  imrodT_gpu_halfedge.txt  imrodT_gpu_modelling.txt  imrodT_gpu_rendering.txt  imrodT_gpu_vertex.txt  knight_stand01_gpu_clear.txt  knight_stand01_gpu_crease.txt  knight_stand01_gpu_halfedge.txt  knight_stand01_gpu_modelling.txt  knight_stand01_gpu_rendering.txt  knight_stand01_gpu_vertex.txt  monsterfrogT_gpu_clear.txt  monsterfrogT_gpu_crease.txt  monsterfrogT_gpu_halfedge.txt  monsterfrogT_gpu_modelling.txt  monsterfrogT_gpu_rendering.txt  monsterfrogT_gpu_vertex.txt  rookT_gpu_clear.txt  rookT_gpu_crease.txt  rookT_gpu_halfedge.txt  rookT_gpu_modelling.txt  (+8 more)
results/bigguyT/: bigguyT_crease_1_1.txt  bigguyT_crease_1_16.txt  bigguyT_crease_1_2.txt  bigguyT_crease_1_4.txt  bigguyT_crease_2_1.txt  bigguyT_crease_3_1.txt  bigguyT_crease_3_16.txt  bigguyT_crease_3_2.txt  bigguyT_crease_3_32.txt  bigguyT_crease_3_4.txt  bigguyT_crease_3_8.txt  bigguyT_crease_4_1.txt  bigguyT_crease_4_32.txt  bigguyT_crease_4_8.txt  bigguyT_crease_5_1.txt  bigguyT_crease_5_32.txt  bigguyT_crease_5_4.txt  bigguyT_crease_5_8.txt  bigguyT_crease_6_1.txt  bigguyT_crease_6_16.txt  bigguyT_crease_6_2.txt  bigguyT_crease_6_32.txt  bigguyT_crease_6_4.txt  bigguyT_crease_7_1.txt  bigguyT_crease_7_2.txt  bigguyT_crease_7_32.txt  bigguyT_halfedge_1_2.txt  bigguyT_halfedge_1_32.txt  bigguyT_halfedge_1_8.txt  bigguyT_halfedge_3_1.txt  bigguyT_halfedge_3_16.txt  bigguyT_halfedge_4_1.txt  bigguyT_halfedge_4_16.txt  bigguyT_halfedge_4_2.txt  bigguyT_halfedge_5_1.txt  bigguyT_halfedge_5_4.txt  bigguyT_halfedge_5_8.txt  bigguyT_halfedge_6_1.txt  bigguyT_halfedge_6_16.txt  bigguyT_halfedge_6_2.txt  (+34 more)
results/carT/: carT_crease_1_1.txt  carT_crease_1_16.txt  carT_crease_1_2.txt  carT_crease_1_32.txt  carT_crease_1_4.txt  carT_crease_1_8.txt  carT_crease_2_1.txt  carT_crease_2_16.txt  carT_crease_2_2.txt  carT_crease_2_32.txt  carT_crease_2_4.txt  carT_crease_2_8.txt  carT_crease_3_1.txt  carT_crease_3_16.txt  carT_crease_3_2.txt  carT_crease_3_32.txt  carT_crease_3_4.txt  carT_crease_3_8.txt  carT_crease_4_1.txt  carT_crease_4_16.txt  carT_crease_4_2.txt  carT_crease_4_32.txt  carT_crease_4_4.txt  carT_crease_4_8.txt  carT_crease_5_1.txt  carT_crease_5_16.txt  carT_crease_5_2.txt  carT_crease_5_32.txt  carT_crease_5_4.txt  carT_crease_5_8.txt  carT_crease_6_1.txt  (+95 more)
scripts/: bench_loop_cpu.sh
scripts_for_paper_figures/: bench_loop  bench_loop_cpu.sh  bench_loop_cpu_paper.sh  bench_loop_cpu_supmat.sh  bench_loop_gpu_supmat.sh  bench_results.txt  results_bigguy_cpu.txt  supplemental_cpu_figures.c
shaders/: catmull-clark_refine_halfedges.glsl  catmull-clark_refine_vertices_edgepoints.glsl  catmull-clark_refine_vertices_facepoints.glsl  catmull-clark_refine_vertices_vertexpoints.glsl  loop_refine_halfedges.glsl  loop_refine_vertices.glsl  refine_creases.glsl
src/: bench_loop.cpp  crease.h  halfedge.h  main_loop.cpp  mesh.cpp  mesh_loop.cpp  mesh_subdiv.cpp
(+1447 files in other folders)
